# open62541-sys

./: .gitignore  Cargo.toml  README.md  build.rs  client.h  server.h
.cargo/: config
.github/workflows/: rust.yml
examples/: server.rs
patches/: 0001-replace-UA_INLINE-with-UA_STATIC_INLINE.patch  0002-provide-inlined-functions.patch  0003-change-definition-of-UA_INLINE.patch  0004-disable-asan.patch
src/: client.rs  converters.rs  lib.rs  server.rs
