[package]
name = "open62541-sys"
version = "0.1.0"
authors = ["Andreas Walter <andreas.walter@waltronix.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"

[dev-dependencies]
ctrlc = "3.1"
log = "0.4"
env_logger = "0.8"

[[example]]
name = "server"
crate-type = ["bin"]
